--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|layoutDirection"
-            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="sensor"
             android:theme="@style/Theme.AppCompat.NoActionBar"
-
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VideoListActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|layoutDirection"
-            android:screenOrientation="sensor"
-            />
     </application>
 
 </manifest>
